Start low degree GI. Add more GI tests. Add induced subgraph and connected component functions to Graph. Add null location check for GAP and Nauty engines. Change data structure constructors.